--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -858,8 +858,8 @@ body {
 }
 
 .connect__img {
-  width: 3vw;
-  height: 3vw;
+  width: 45px;
+  height: 45px;
 }
 .connect__title_link {
   text-decoration: none;
@@ -895,8 +895,8 @@ body {
   line-height: 36px;
 }
 .social__img {
-  width: 3vw;
-  height: 3vw;
+  width: 41px;
+  height: 41px;
 }
 
 .social__img_whatsap {
@@ -991,6 +991,14 @@ body {
   .connect__title {
     font-size: 16px;
   }
+  .connect__img {
+    width: 40px;
+    height: 40px;
+  }
+  .social__img {
+    width: 36px;
+    height: 36px;
+  }
 }
 @media screen and (min-width: 1024px) and (max-width: 1100px) {
   .btn-details {
@@ -1025,6 +1033,14 @@ body {
   /*--footer---*/
   .connect__title {
     font-size: 15px;
+  }
+  .connect__img {
+    width: 38px;
+    height: 38px;
+  }
+  .social__img {
+    width: 36px;
+    height: 36px;
   }
 }
 
@@ -1129,8 +1145,8 @@ body {
   /*------footer----*/
 
   .connect__img {
-    width: 4vw;
-    height: 4vw;
+    width: 40px;
+    height: 40px;
   }
   .nav__link,
   .copyrights {
@@ -1160,8 +1176,8 @@ body {
     margin-left: 1%;
   }
   .social__img {
-    width: 4vw;
-    height: 4vw;
+    width: 36px;
+    height: 36px;
   }
 
   .map {
@@ -1344,10 +1360,13 @@ body {
   }
 
   /*------footer----*/
-  .connect__img,
+  .connect__img {
+    width: 40px;
+    height: 40px;
+  }
   .social__img {
-    width: 5vw;
-    height: 5vw;
+    width: 36px;
+    height: 36px;
   }
   .nav__link,
   .copyrights {
@@ -1525,10 +1544,13 @@ body {
     font-size: 18px;
     line-height: 27px;
   }
-  .connect__img,
+  .connect__img {
+    width: 39px;
+    height: 39px;
+  }
   .social__img {
-    width: 9vw;
-    height: 9vw;
+    width: 33px;
+    height: 33px;
   }
   .nav__link {
     font-size: 10px;
