--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -16,7 +16,9 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
 }
-
+.burger {
+  display: none;
+}
 .header-container {
   padding: 1% 5% 15%;
 }
@@ -1049,6 +1051,7 @@ body {
     width: 100%;
   }
   /*----header-----*/
+
   .right,
   .navigation {
     display: none;
@@ -1294,6 +1297,19 @@ body {
     display: block;
     align-self: flex-start;
   }
+  /*---sale----*/
+  .cards {
+    flex-direction: column;
+    align-items: center;
+  }
+  .item {
+    margin-bottom: 2%;
+  }
+  .sale__img_car,
+  .sale__img_detail {
+    display: none;
+  }
+
   /*------sertificate------*/
   .common {
     flex-direction: column-reverse;
