--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -30,7 +30,7 @@ body {
 }
 
 .top__logo {
-  width: 8vw;
+  width: 111px;
 }
 
 .navigation {
@@ -55,7 +55,7 @@ body {
 .right {
   width: 207px;
   height: 72px;
-  margin-top: 1.5%;
+  margin-top: 2%;
   display: flex;
   flex-direction: column;
   color: #ffffff;
@@ -965,6 +965,10 @@ body {
 @media screen and (min-width: 1101px) and (max-width: 1400px) {
   /*-----header--------*/
 
+  .top__logo {
+    width: 90px;
+  }
+
   .navigation__link {
     font-size: 14px;
   }
@@ -1007,6 +1011,10 @@ body {
     margin-bottom: 5%;
   }
   /*-----header--------*/
+
+  .top__logo {
+    width: 80px;
+  }
 
   .navigation__link {
     font-size: 12px;
@@ -1051,6 +1059,10 @@ body {
     width: 100%;
   }
   /*----header-----*/
+
+  .top__logo {
+    width: 80px;
+  }
 
   .right,
   .navigation {
@@ -1215,6 +1227,11 @@ body {
     width: 100%;
   }
   /*----header-----*/
+
+  .top__logo {
+    width: 60px;
+  }
+
   .header-container {
     padding: 1% 2% 15%;
   }
@@ -1459,6 +1476,11 @@ body {
   .header-container {
     padding: 1% 2% 15%;
   }
+
+  .top__logo {
+    width: 111px;
+  }
+
   .area {
     width: 255px;
     margin: 10% auto 20%;
