--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -449,31 +449,36 @@ body {
 /*video*/
 
 .video {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   max-width: 100%;
-  height: 100%;
+  max-height: 100%;
   background: no-repeat url(/assets/images/services/unsplash_dvACrXUExLs.png);
-  background-size: 100%;
+  background-size: cover;
 }
-
+.video__container {
+  padding: 5%;
+}
 .video__pic {
-  max-width: 100%;
-  margin: 5%;
+  width: 100%;
+  text-align: center;
 }
 
-Team
+/*Team*/
 .team {
   position: relative;
+  max-width: 100%;
+  height: 100%;
   padding-top: 1%;
-  padding-bottom: 0.5%;
+  padding-bottom: 4%;
 }
 
 .team__container {
-  display: flex;
+  display: grid;
   justify-content: space-around;
-  height: 510px;
+  grid-template-columns: 4, 1fr;
+  gap: 2%;
+  grid-template-areas:
+    "t-ph t-ph t-ph t-ph";
+  
 }
 
 .team__backg-right {
@@ -481,13 +486,15 @@ Team
   width: 30%;
   right: 0;
   bottom: 30%;
+  z-index: -1;
 }
 
 .team__backg-left {
   position: absolute;
   width: 30%;
   left: 0;
-  top: 25%;
+  top: 30%;
+  z-index: -1;
 }
 
 .team__title {
@@ -500,17 +507,19 @@ Team
 }
 
 .team__photo-img {
-  height: 90%;
-  width: auto;
+  height: 100%;
+  width: 100%;
+  grid-area: t-ph;
 }
 
-Services
+/*Services*/
 
 .services {
   padding: 1%;
   background: no-repeat url(/assets/images/video/фон.png);
-  min-height: 100%;
-  background-size: 100%;
+  max-height: 100%;
+  max-width: 100%;
+  background-size: cover;
 }
 
 .services__title {
@@ -543,7 +552,8 @@ Services
   background-color: #ffff;
   border-radius: 9px;
   height: 112px;
-  margin: 0 -10%;
+  overflow: hidden;
+  margin: 0 -8%;
 }
 
 .services__img {
@@ -556,26 +566,27 @@ Services
   font-size: 14px;
   line-height: 150%;
   text-align: left;
-  align-self: center;
-  margin: 2% 5%;
+  margin: 5% auto;
 }
 
 
 /*Test*/
 .test {
-  height: auto;
+  max-height:100%;
   max-width: 100%;
   background: no-repeat url(/assets/images/test/Mask\ Group.png);
-  background-size: 100%;
+  background-size: cover;
 }
 
 .test__container {
-  margin: 0 auto;
   display: flex;
   justify-content: center;
   text-align: center;
 }
 
+.test__body {
+  margin: 3% auto 4%;
+}
 .test__title {
   font-weight: 700, bold;
   font-size: 36px;
@@ -596,37 +607,37 @@ Services
   border-radius: 9px;
   border: none;
   height: 3em;
-  width: 18%;
+  width: 25%;
   text-decoration: none;
   font-weight: 600;
   font-size: 14px;
   line-height: 130%;
-  margin-bottom: 3%;
+  margin-top: 3%;
 }
   
 /*Photo*/
 
-.photo__title {
+.photo {
+  max-height: 100%;
+  max-width: 100%;
+  padding: 1% 0 3%;
+}
+.photo__title2 {
   font-weight: 700, bold;
   font-size: 36px;
   line-height: 130%;
   text-align: center;
-  margin: 0;
-  padding: 4%;
 }
 
 .photo__container {
-  height: 100%;
-  max-width: 100%;
-  margin-bottom: 3%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 .photo__slider {
-  height: 100%;
-  width: 100%;
+  max-height: 100%;
+  min-width: 100%;
 }
 /*--------------------------Questions-----------------------------*/
 .feedback {
@@ -1132,6 +1143,15 @@ Services
   .extantion__slider-img {
     width: 100vw;
   }
+/*Team*/
+.team__container {
+grid-template-columns: repeat (2, 1fr);
+grid-template-rows: repeat(2, 1fr);
+justify-content: space-evenly;
+grid-template-areas:
+    "t-ph t-ph";
+}
+
 
   /*---------sale------*/
   .cards {
