--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -478,7 +478,6 @@ body {
   gap: 2%;
   grid-template-areas:
     "t-ph t-ph t-ph t-ph";
-  
 }
 
 .team__backg-right {
@@ -515,7 +514,7 @@ body {
 /*Services*/
 
 .services {
-  padding: 1%;
+  padding: 1% 3% 3%;
   background: no-repeat url(/assets/images/video/фон.png);
   max-height: 100%;
   max-width: 100%;
@@ -532,43 +531,33 @@ body {
 }
 
 .services__container {
-  display: flex;
-}
+  margin: 2% 2%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  gap: 10% 2%;
+  }
 
-.services__row {
-  display: flex;
-  flex-wrap: wrap;
-  margin-bottom: 5%;
-}
-
-.services__column {
-  flex: 0 1 25%;
-  margin: 1%;
-  padding: 0 3%;
-}
-
-.services__item-row {
-  display: flex;
-  background-color: #ffff;
-  border-radius: 9px;
-  height: 112px;
-  overflow: hidden;
-  margin: 0 -8%;
+.services__card {
+display: flex;
+flex-direction: row;
+text-align: left;
+background-color: #ffff;
+border-radius: 9px;
+height: 100%;
+width: 100%;
 }
 
 .services__img {
-  padding: 1%;
   margin: 2%;
 }
 
-.services__item-text {
+.services__text {
   font-weight: 400;
   font-size: 14px;
   line-height: 150%;
   text-align: left;
-  margin: 5% auto;
 }
-
 
 /*Test*/
 .test {
@@ -1145,13 +1134,13 @@ body {
   }
 /*Team*/
 .team__container {
+margin: 0 5%;
 grid-template-columns: repeat (2, 1fr);
 grid-template-rows: repeat(2, 1fr);
 justify-content: space-evenly;
 grid-template-areas:
     "t-ph t-ph";
 }
-
 
   /*---------sale------*/
   .cards {
@@ -1496,6 +1485,16 @@ grid-template-areas:
     display: block;
     align-self: flex-start;
   }
+
+  /*Team*/
+.team__container {
+margin: 0 2%;
+grid-template-columns: repeat (2, 1fr);
+grid-template-rows: repeat(2, 1fr);
+justify-content: space-evenly;
+grid-template-areas:
+    "t-ph t-ph";
+}
   /*---sale----*/
   .cards {
     flex-direction: column;
@@ -1690,6 +1689,36 @@ grid-template-areas:
     font-size: 12px;
     line-height: 15px;
   }
+/*test*/
+.test__container {
+  padding: 3%;
+}
+
+.test__title {
+  font-weight: 400;
+  font-size: 33px;
+  line-height: 95%;
+  color: white;
+}
+/*photo*/
+.photo__title2 {
+  font-size: 25px;
+}
+
+
+  /*Team*/
+.team__container {
+  margin: 2% 2% 5%;
+  padding: 2% 2% 20%;
+  grid-template-columns: repeat (1, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  grid-template-areas:
+      "t-ph";
+}
+.team__title {
+  font-size: 25px;
+}
+
   /*----sale----*/
   .sale-container {
     margin: 2% 2% 5%;
@@ -1847,5 +1876,31 @@ grid-template-areas:
     width: 110px;
     height: 45px;
     font-weight: lighter;
+  }
+
+  /*test*/
+  .test__container {
+  padding: 2%;
+  }
+
+.test__title {
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 40px;
+  color: white;
+  }
+
+  /*Team*/
+.team__container {
+  margin: 2% 2% 5%;
+  padding: 2% 2% 20%;
+  grid-template-columns: repeat (1, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  grid-template-areas:
+      "t-ph";
+  }
+
+.team__title {
+  font-size: 25px;
   }
 }
